don't schedule post-start-up activities under modal progress
GitOrigin-RevId: 2ac572b66cf0ad8bc28a5713bc71967a8700f19d